src/objects/ACCL__Job_List__c.object
<CustomObject>
    <description>Holds the job lists generated out of non-standard job definition lists.</description>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Lists</relationshipLabel>
        <relationshipName>Job_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Call_Date__c</fullName>
        <formula>ACCL__Call__r.ACCL__Start_Date__c</formula>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Call_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Template</label>
        <referenceTo>ACCL__Call_Template__c</referenceTo>
        <relationshipLabel>Job Lists</relationshipLabel>
        <relationshipName>Job_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call</label>
        <referenceTo>ACCL__Call__c</referenceTo>
        <relationshipLabel>Job Lists</relationshipLabel>
        <relationshipName>Job_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_JDL__c</fullName>
        <description>Description of the Job Definition List</description>
        <formula>ACCL__Job_Definition_List__r.ACCL__Description__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Done__c</fullName>
        <description>0: Not Done;
1: Done;
2: Canceled</description>
        <label>Done</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Job_Definition_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Job_Definition_List__c.ACCL__Standard_Jobs__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Job_Definition_List__c</referenceTo>
        <relationshipLabel>Job Lists</relationshipLabel>
        <relationshipName>Job_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <label>Valid Thru</label>
        <type>Date</type>
    </fields>
    <label>Job List</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Job_Definition_List__c</columns>
        <columns>ACCL__Description_JDL__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Call_Template__c</columns>
        <columns>ACCL__Manager__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Call_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Actual_Valid_Job_Lists</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description_JDL__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Call_Template__c</columns>
        <columns>ACCL__Manager__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Call_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Valid_From__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ACCL__Valid_Thru__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Actual Valid Job Lists</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>JL-{0000}</displayFormat>
        <label>Job List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_for_all_lookups</fullName>
        <active>true</active>
        <description>The Customer and the Activity Template must have the same Sales Org.</description>
        <errorConditionFormula>TEXT(ACCL__Account__r.ACCL__Account_Template__r.ACCL__Sales_Org__c) &lt;&gt;  TEXT( ACCL__Job_Definition_List__r.ACCL__Job_Definition_List_Template__r.ACCL__Sales_Org__c )</errorConditionFormula>
        <errorMessage>The Customer and the Activity Template must have the same Sales Org.</errorMessage>
    </validationRules>
</CustomObject>